# rust-blockchain-project

./: README.md
miner/: Cargo.toml
miner/src/: block.rs  miner.rs  simpletree.rs
server/src/: main.rs
